--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
         "laraveldaily/laravel-charts": "^0.1.29",
+        "league/flysystem-aws-s3-v3": "^3.29",
+        "league/flysystem-local": "^3.30",
         "nuovo/spreadsheet-reader": "^0.5.11",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-permission": "^6.19",
