--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "nuovo/spreadsheet-reader": "^0.5.11",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-permission": "^6.19",
+        "symfony/http-client": "^7.3",
+        "symfony/mailgun-mailer": "^7.1",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
