Add Twilio SMS notifications system with user preferences and profile settings

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "spatie/laravel-permission": "^6.19",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.1",
+        "twilio/sdk": "^8.6",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
