Add trainer review system, anti-spam measures, and enhance gym management features
- Implement trainer review system with star ratings and comments
- Add anti-spam middleware and cleanup commands
- Enhance children table with additional fields
- Add recommendation response system with admin oversight
- Implement schedule type management
- Add CSV import functionality for schedules
- Enhance admin dashboard with recent recommendations
- Add trainer ratings to schedule cards
- Fix photo upload functionality for schedules
- Add various console commands for maintenance
- Update validation rules and middleware
- Enhance UI/UX across multiple views

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laraveldaily/laravel-charts": "^0.1.29",
         "league/flysystem-aws-s3-v3": "^3.29",
         "league/flysystem-local": "^3.30",
+        "maatwebsite/excel": "^3.1",
+        "mews/captcha": "^3.4",
         "nuovo/spreadsheet-reader": "^0.5.11",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-permission": "^6.19",
